<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgrounddoctor3"
    tools:context=".LoginDoctorActivity">

    <Button
        android:id="@+id/validerDoctorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPink"
        android:text="@string/validerDoctorButton"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/passwordDoctorInput"
        app:layout_constraintStart_toStartOf="@+id/passwordDoctorInput"
        app:layout_constraintTop_toBottomOf="@+id/passwordDoctorInput" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginDocteurInput"
        android:layout_width="236dp"
        android:layout_height="44dp"
        android:layout_marginTop="148dp"
        android:hint="@string/nomDocteurLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/passwordDoctorInput"
        android:layout_width="238dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:hint="@string/passwordDoctorInput"
        app:layout_constraintEnd_toEndOf="@+id/loginDocteurInput"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/loginDocteurInput"
        app:layout_constraintTop_toBottomOf="@+id/loginDocteurInput" />

    <TextView
        android:id="@+id/newCountText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/newCount"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/validerDoctorButton" />

</androidx.constraintlayout.widget.ConstraintLayout>