<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundpatient"
    tools:context=".LoginPatientActivity">

    <Button
        android:id="@+id/validerPatientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@color/colorGreen"
        android:text="@string/validerDoctorButton"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

    <TextView
        android:id="@+id/newCountText2"
        android:layout_width="302dp"
        android:layout_height="37dp"
        android:layout_marginTop="52dp"
        android:text="@string/newCount"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/validerPatientButton"
        app:layout_constraintStart_toStartOf="@+id/validerPatientButton"
        app:layout_constraintTop_toBottomOf="@+id/validerPatientButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginPatientInput"
        android:layout_width="238dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/loginDoctorInput" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="238dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/loginPatientInput"
        app:layout_constraintStart_toStartOf="@+id/loginPatientInput"
        app:layout_constraintTop_toBottomOf="@+id/loginPatientInput">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordDocteurrInput" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>